[gd_scene load_steps=15 format=3 uid="uid://bwksfc2rao3al"]

[ext_resource type="Script" path="res://Entities/LevelObstacles/vine_shooter_body.gd" id="1_2ty4o"]
[ext_resource type="PackedScene" uid="uid://cj8xfose28o1" path="res://UI/Health Bar/texture_health_bar.tscn" id="2_femkk"]
[ext_resource type="Script" path="res://Entities/LevelObstacles/vine_shooter_action.gd" id="3_bhial"]
[ext_resource type="Texture2D" uid="uid://dp5i2tu222h3c" path="res://Entities/LevelObstacles/Obstacle_Assets/PlantAlternate_ShooterV2.png" id="3_sdltf"]
[ext_resource type="PackedScene" uid="uid://c53eeswqgi1is" path="res://Entities/LevelObstacles/VineSpikeShot.tscn" id="5_m0ry5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_53gfq"]
radius = 14.0
height = 32.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_a4yxf"]
a = Vector2(1.99847, -424)
b = Vector2(2.00134, 370)

[sub_resource type="Animation" id="Animation_0a2yr"]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.2, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1.03333, 1.16667, 1.33333, 1.5, 1.66667, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_ffjn3"]
resource_name = "Attack_Air"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.2, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5, 1.66667, 1.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [43, 44, 45, 18, 19, 20, 21, 50, 51, 52, 53, 54]
}

[sub_resource type="Animation" id="Animation_cqy0j"]
resource_name = "Death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../VineShooterHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Floor_Detection_Area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3323r"]
resource_name = "Idle"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 42, 43, 42]
}

[sub_resource type="Animation" id="Animation_do4yq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [43]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fnudt"]
_data = {
"Attack": SubResource("Animation_0a2yr"),
"Attack_Air": SubResource("Animation_ffjn3"),
"Death": SubResource("Animation_cqy0j"),
"Idle": SubResource("Animation_3323r"),
"RESET": SubResource("Animation_do4yq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0sd0o"]

[node name="VineShooterBody" type="Area2D"]
script = ExtResource("1_2ty4o")

[node name="VineShooterHitbox" type="CollisionShape2D" parent="."]
position = Vector2(-4, -13)
shape = SubResource("CapsuleShape2D_53gfq")

[node name="HealthBar" parent="." instance=ExtResource("2_femkk")]
offset_left = -19.0
offset_top = 1.0
offset_right = 45.0
offset_bottom = 24.0
scale = Vector2(0.448872, 0.363552)

[node name="Floor_Detection_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor_Detection_Area"]
position = Vector2(-4, -11)
rotation = 1.5708
shape = SubResource("SegmentShape2D_a4yxf")

[node name="VineShooterAction" type="Area2D" parent="."]
script = ExtResource("3_bhial")

[node name="AnimatedVineShooter" type="AnimationPlayer" parent="VineShooterAction"]
libraries = {
"": SubResource("AnimationLibrary_fnudt")
}

[node name="Sprite2D" type="Sprite2D" parent="VineShooterAction"]
position = Vector2(0, -14)
texture = ExtResource("3_sdltf")
hframes = 14
vframes = 4
frame = 43

[node name="CollisionShape2D" type="CollisionShape2D" parent="VineShooterAction"]
position = Vector2(-4, -13)
shape = SubResource("CapsuleShape2D_0sd0o")
disabled = true

[node name="ShootingTimer" type="Timer" parent="VineShooterAction"]

[node name="VineSpikeShot" parent="." instance=ExtResource("5_m0ry5")]
position = Vector2(2, -11)

[connection signal="healthChanged" from="." to="." method="_on_health_changed"]
[connection signal="health_changed" from="." to="VineShooterAction" method="_on_vine_shooter_body_health_changed"]
[connection signal="area_entered" from="Floor_Detection_Area" to="VineShooterAction" method="_on_floor_detection_area_entered"]
[connection signal="area_exited" from="Floor_Detection_Area" to="VineShooterAction" method="_on_floor_detection_area_exited"]
[connection signal="body_entered" from="Floor_Detection_Area" to="VineShooterAction" method="_on_floor_detection_CHAR_BODY_entered"]
[connection signal="animation_finished" from="VineShooterAction/AnimatedVineShooter" to="VineShooterAction" method="_on_animated_vine_shooter_animation_finished"]
[connection signal="timeout" from="VineShooterAction/ShootingTimer" to="VineShooterAction" method="_on_shooting_timer_timeout"]
